--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "react-gtm-module": "^2.0.11",
+    "react-ga": "^3.3.0",
     "react-hot-toast": "^2.1.1",
     "responsive-loader": "^2.3.0",
     "svg-sprite-loader": "^6.0.9",
